<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="button_allow" tools:keep="@string/button_allow">Allow</string>
    <string name="button_deny" tools:keep="@string/button_deny">Deny</string>

    <string name="file_not_found">File not found!\nFile is either Moved, Deleted or Renamed.</string>
    <string name="media">Media</string>
    <string name="docs">Docs</string>
    <string name="view_all">View all</string>
    <string name="empty_text_chat_list">Your chats appear here\nStart chatting by selecting a user.</string>
    <string name="empty_group_chat_list">Your group chats appear here\nStart chatting by selecting a group.</string>
    <string name="empty_log_call_list">Your call logs appear here\nStart by selecting a user.</string>
    <string name="no_groups">You have no groups\nCreate a new group to begin with.</string>
    <string name="invite_friends">Invite friends…</string>
    <string name="message_otp">We will send you a OTP message. Standard rates may apply.</string>
    <string name="empty_contact_list_for_group">You don\'t have sufficient friends\nto be in a group</string>
    <string name="content_privacy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Feugiat sed lectus vestibulum mattis. Tincidunt praesent semper feugiat nibh sed pulvinar proin gravida hendrerit. Tristique nulla aliquet enim tortor. Donec et odio pellentesque diam volutpat commodo. Mi ipsum faucibus vitae aliquet nec. In hac habitasse platea dictumst vestibulum rhoncus. Varius vel pharetra vel turpis nunc eget lorem dolor. At ultrices mi tempus imperdiet nulla malesuada. Et netus et malesuada fames ac turpis egestas. Aliquam sem fringilla ut morbi. Scelerisque eleifend donec pretium vulputate sapien nec. Ut tortor pretium viverra suspendisse. Habitant morbi tristique senectus et netus et malesuada fames ac. Condimentum lacinia quis vel eros donec ac odio tempor orci. Sed viverra tellus in hac habitasse platea dictumst. A cras semper auctor neque vitae tempus quam. Sollicitudin tempor id eu nisl nunc. Nulla aliquet enim tortor at auctor urna nunc.

Quis vel eros donec ac odio tempor orci. Sit amet consectetur adipiscing elit pellentesque habitant morbi. Non diam phasellus vestibulum lorem sed risus ultricies tristique. Morbi enim nunc faucibus a pellentesque sit amet porttitor. Scelerisque in dictum non consectetur. Metus aliquam eleifend mi in nulla posuere. In hac habitasse platea dictumst. Ultricies leo integer malesuada nunc vel risus commodo viverra maecenas. Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Metus dictum at tempor commodo ullamcorper a lacus vestibulum sed. Egestas diam in arcu cursus euismod quis viverra.

Neque aliquam vestibulum morbi blandit. Molestie nunc non blandit massa enim nec dui. Donec et odio pellentesque diam volutpat commodo sed egestas egestas. Augue interdum velit euismod in pellentesque massa placerat. Nunc id cursus metus aliquam. Pulvinar pellentesque habitant morbi tristique senectus. Eu turpis egestas pretium aenean pharetra magna ac placerat vestibulum. Laoreet non curabitur gravida arcu ac tortor dignissim convallis aenean. Ac tortor dignissim convallis aenean et tortor at risus viverra. Vitae purus faucibus ornare suspendisse sed nisi lacus sed viverra. Pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat. Consequat id porta nibh venenatis. Sit amet luctus venenatis lectus magna. Sit amet massa vitae tortor condimentum. Nisi lacus sed viverra tellus in hac habitasse platea. Nisi lacus sed viverra tellus in hac habitasse platea dictumst. Non odio euismod lacinia at quis risus. Mollis aliquam ut porttitor leo.</string>
    <string name="hint_phone">Your phone number</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend?</string>
    <string name="change_number">Change number?</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_sending">Sending otp</string>
    <string name="otp_verifying">Verifying otp</string>
    <string name="otp_sending_msg">One time password is being send to: \n %s</string>
    <string name="otp_verifying_msg">Verifying otp…</string>
    <string name="error_detail">Something went wrong%s</string>
    <string name="otp_sent">Please type the verification code sent to %s \n</string>
    <string name="logging_in">Logging you in!</string>
    <string name="error_create_user">Something went wrong, unable to create user.</string>
    <string name="verification_cancel_title">Cancel verification</string>
    <string name="verification_cancel_message">Verification is in progress! do you want to cancel and go back?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="validation_req_country">Select country code!</string>
    <string name="validation_req_phone">Enter phone number!</string>
    <string name="validation_req_phone_valid">Enter a valid phone number</string>
    <string name="confirm_phone">One time password will be sent on this number! Continue with this number?</string>
    <string name="edit">Edit</string>
    <string name="hint_search">Search</string>
    <string name="tab_title_chat">Chats</string>
    <string name="tab_title_group">Groups</string>
    <string name="tab_title_call">Calls</string>
    <string name="invitation_title">%s Invitation</string>
    <string name="invitation_message">Hey, I found %s!, cool chatting application, come join me here.\nhttps://play.google.com/store/apps/details?id=%s</string>
    <string name="invitation_share_title">Share using..</string>
    <string name="delete_chat_title">Delete chat</string>
    <string name="delete_chat_message">Continue deleting selected chats?</string>
    <string name="selected_count">%d selected</string>
    <string name="create_group">Create group</string>
    <string name="done">DONE</string>
    <string name="hint_group_name">Group name</string>
    <string name="group_info">Group info</string>
    <string name="short_description_of_group">Short description of group!</string>
    <string name="participants_0">Participants (0)</string>
    <string name="add_more">+ Add more</string>
    <string name="get_image_title">Get image from</string>
    <string name="get_image_camera">Camera</string>
    <string name="get_image_gallery">Gallery</string>
    <string name="validation_req_participant">No participants selected</string>
    <string name="validation_req_name">User name can\'t be empty</string>
    <string name="validation_req_description">Give this group a short description</string>
    <string name="err_upload_image">Unable to upload image.</string>
    <string name="group_created">Group created</string>
    <string name="error_request">Unable to process request at this time</string>
    <string name="participants_count">Participants (%d)</string>
    <string name="back">Back</string>
    <string name="your_name">your name</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="download_message">Download %s now</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="validation_req_username">Name cannot be empty</string>
    <string name="validation_req_status">Status cannot be empty</string>
    <string name="updated">Updated!</string>
    <string name="image_updated">Profile image updated</string>
    <string name="type_your_message">Type your message</string>
    <string name="image">Image</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="contact">Contact</string>
    <string name="location">Location</string>
    <string name="document">Document</string>
    <string name="recording_cancelled">Recording cancelled</string>
    <string name="recodring">Recording…</string>
    <string name="slide_cancel">%s (Slide left to cancel)</string>
    <string name="message_copied">Messages copied</string>
    <string name="delete_msg_title">Delete messages</string>
    <string name="delete_msg_message">Continue deleting selected messages?</string>
    <string name="removed_from_group">You were removed from this group</string>
    <string name="just_moment">Just a moment..</string>
    <string name="voice_calling">Voice Calling</string>
    <string name="video_calling">Voice Calling</string>
    <string name="video_calling_in">Incoming video call</string>
    <string name="voice_calling_in">Incoming voice call</string>
    <string name="permission_mic">This application needs permission to use your microphone to function properly.</string>
    <string name="gave_miss">Gave you a miss call</string>
    <string name="err_upload_img">Unable to upload image.</string>
    <string name="phone_number">Phone number</string>
    <string name="status">Status</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="no_members">No new members to add</string>
    <string name="add_member_title">Add member(s)</string>
    <string name="add_member_message">Are you sure you want to add %s in this group?</string>
    <string name="member_count">%d member(s)</string>
    <string name="member_added">Members added</string>
    <string name="dial_permission">To dial number automatically for you we need this permission</string>
    <string name="remove_user_title">Remove user</string>
    <string name="remove_user_message">Are you sure you want to remove %s from this group?</string>
    <string name="member_removed">Member removed</string>
    <string name="invite_friends_title">Invite friends</string>
    <string name="invite_friends_message">Following contacts are missing out</string>
    <string name="invite_short">invite</string>
    <string name="name">Name</string>
</resources>
