<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:padding="4dp"
                android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_toEndOf="@+id/back"
                android:layout_toRightOf="@+id/back"
                android:gravity="center_vertical"
                android:text="@string/create_group"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:text="@string/done"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/done"
                android:orientation="horizontal"
                android:padding="16dp">

                <FrameLayout
                    android:id="@+id/groupImageContainer"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/round_gray">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/groupImage"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_camera_white" />

                    <ProgressBar
                        android:id="@+id/groupImageProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true" />
                </FrameLayout>

                <EditText
                    android:id="@+id/groupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/hint_group_name"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/bg_gray" />

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/group_info"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/groupStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/short_description_of_group"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@color/textColor2" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/participantsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/participants_0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/participantsAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="4dp"
                android:text="@string/add_more"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/participants"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/participantsAdd"
                android:layout_marginTop="8dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>