<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.verbosetech.whatsclone.fragments.ChatDetailFragment">

    <RelativeLayout
        android:id="@+id/mediaSummaryContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mediaSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/mediaSummaryAll"
            android:background="@color/bg_gray"
            android:layout_toStartOf="@+id/mediaSummaryAll" />

        <TextView
            android:id="@+id/mediaSummaryAll"
            android:layout_width="@dimen/media_summary_strip"
            android:layout_height="@dimen/media_summary_strip"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="2dp"
            android:background="@color/darkGreen"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/view_all"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/groupDetailContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/participantsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/participants_0"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/participantsAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="4dp"
            android:text="@string/add_more"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:layout_alignParentEnd="true" />

        <ProgressBar
            android:id="@+id/participantsProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/participantsCount"
            android:indeterminate="true"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/participants"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/participantsCount"
            android:layout_marginTop="8dp" />
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/userDetailContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/userPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/userPhoneClick"
                    android:gravity="center_vertical"
                    android:textColor="@color/textColor0"
                    android:textSize="16sp"
                    android:layout_toStartOf="@+id/userPhoneClick" />

                <ImageView
                    android:id="@+id/userPhoneClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_phone"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:background="@color/textColorSecondary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <TextView
                android:id="@+id/userStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/textColor0"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:background="@color/textColorSecondary" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/muteNotificationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mute_notifications"
                android:textColor="@color/textColor0"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
