<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.verbosetech.whatsclone.activities.SignInActivity">

    <include
        layout="@layout/activity_splash"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="32dp">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/countryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/countryCodeDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/countryCode"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countryCodeDivider"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:background="@null"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/phoneNumber"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/submit"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/message_otp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/round_blue"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>
